added router and firebase auth

--- a/metroanalysis/index.html
+++ b/metroanalysis/index.html
@@ -7,6 +7,7 @@
         background-size: auto;
         background-attachment: fixed;
         background-position: center;
+  }
   </style>
   <head>
     <meta charset="utf-8">
@@ -21,7 +22,7 @@
 
 
   <body background="bcg1.jpg">
-    <div id="app"></div>
+    <div id="root"></div>
     
     <!-- built files will be auto injected -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
